Remove homepage, fix video on mobile

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -150,6 +150,14 @@ a.header {
   }
 }
 
+.guides-video {
+
+  iframe {
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
 .navbar.normal {
   position: fixed;
   width: 100%;
